# simple-hex-printer

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
.github/workflows/: main.yml
cmake/: Config.cmake.in  install_helper.cmake  package_helper.cmake
include/shp/: shp.h
integration/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/src/: format_backup.cpp  integral_hex_writer.cpp  iterator_hex_writer.cpp
